--- a/sales.css
+++ b/sales.css
@@ -9,7 +9,7 @@ h1
     border-radius: 20px 0px 20px 0px;
     text-align: center;
     font-size: 70px;
-    background-color: red;
+    background-color: orange;
 }
 
 sub
