--- a/sales.css
+++ b/sales.css
@@ -6,11 +6,16 @@ h1
 {
     color: blue;
     border: 2px solid black;
-    border-radius: 20px 0px 20px 0px;
+    border-radius: 13px ;
     text-align: center;
-    font-size: 70px;
+    font-size: 45px;
     background-color: orange;
-    margin-top:-7;
+    margin-top:-7px;
+     height:53px;
+     width: 1375px;
+     margin-left: -15px;
+    
+    
 }
 
 sub
